--- a/Views/Link/UniqueLinkPanel.cshtml
+++ b/Views/Link/UniqueLinkPanel.cshtml
@@ -12,7 +12,8 @@
                 <input type="text" name="search" class="form-control" placeholder="search">
                 <div class="input-group-prepend">
                     <button class="btn btn-success" type="submit">Search</button>
-                    <a asp-controller="admin" asp-action="uniquelinkpanel" class="btn btn-warning" role="button">Clear</a>
+                    <a asp-controller="admin" asp-action="uniquelinkpanel" class="btn btn-warning">Clear</a>
+                    <a asp-controller="admin" asp-action="createuser" class="btn btn-success">Create user</a>
                 </div>
             </div>
         </form>
