--- a/Views/Admin/Userspanel.cshtml
+++ b/Views/Admin/Userspanel.cshtml
@@ -57,6 +57,7 @@ if(Model is not null)
 {
 <div class="row pagginationDiv">
     <div class="col-12">
+        <small>@Model.Count of @Model.TotalCount</small>
         <nav class="nav justify-content-center border-top border-white">
             <ul class="pagination mt-2">
                 <li class="page-item @Model.PreviousDisabled()"><a class="page-link" asp-controller="admin" asp-action="userspanel" asp-route-pageNumber="@(Model.PageIndex-1)">Previous</a></li>
