--- a/Views/Admin/Logs.cshtml
+++ b/Views/Admin/Logs.cshtml
@@ -54,7 +54,8 @@
 if(Model is not null)
 {
     <div class="row pagginationDiv">
-        <div class="col-12">
+        <div class="col-12 text-nowrap">
+            <small>@Model.Count of @Model.TotalCount</small>
             <nav class="nav justify-content-center border-top border-white">
                 <ul class="pagination mt-2">
                     <li class="page-item @Model.PreviousDisabled()"><a class="page-link" asp-controller="admin" asp-action="logs" asp-route-pageNumber="@(Model.PageIndex-1)">Previous</a></li>
