--- a/Views/Link/UniqueLinkPanel.cshtml
+++ b/Views/Link/UniqueLinkPanel.cshtml
@@ -4,15 +4,15 @@
     string textColor = String.Empty;
 }
 @model PaginetedList<UniqueLink>
-
+                                 
 <div class="row">
     <div class="col-sm-12 col-md-6 col-lg-3">
-        <form method="get" asp-controller="admin" asp-action="uniquelinkpanel" autocomplete="off">
+        <form method="get" asp-controller="link" asp-action="uniquelinkpanel" autocomplete="off">
             <div class="input-group mb-3">
                 <input type="text" name="search" class="form-control" placeholder="search">
                 <div class="input-group-prepend">
                     <button class="btn btn-success" type="submit">Search</button>
-                    <a asp-controller="admin" asp-action="uniquelinkpanel" class="btn btn-warning">Clear</a>
+                    <a asp-controller="link" asp-action="uniquelinkpanel" class="btn btn-warning">Clear</a>
                     <a asp-controller="admin" asp-action="createuser" class="btn btn-success">Create user</a>
                 </div>
             </div>
@@ -60,7 +60,7 @@
                 <td><a asp-controller="link" asp-action="deleteurl" asp-route-guid="@link.Guid" asp-route-pNumber="@Model.PageIndex" class="btn btn-danger btn-sm">Delete</a></td>
                 <td><a asp-controller="link" asp-action="refreshurl" asp-route-guid="@link.Guid" asp-route-pNumber="@Model.PageIndex" class="btn btn-warning btn-sm">Refresh</a></td>
                 <td><a asp-controller="link" asp-action="shareurl" asp-route-guid="@link.Guid" class="btn btn-success btn-sm">Copy link</a></td>
-                <td><a asp-controller="link" asp-action="setminutes" asp-route-guid="@link.Guid" class="btn btn-warning btn-sm">Set minutes</a></td>
+                <td><a asp-controller="link" asp-action="editminutes" asp-route-guid="@link.Guid" class="btn btn-warning btn-sm">Set minutes</a></td>
             </tr>
         }        
     }
@@ -73,6 +73,7 @@ if(Model is not null)
 {
     <div class="row pagginationDiv">
         <div class="col-12">
+            <small>@Model.Count of @Model.TotalCount</small>
             <nav class="nav justify-content-center border-top border-white">
                 <ul class="pagination mt-2">
                     <li class="page-item @Model.PreviousDisabled()"><a class="page-link" asp-controller="link" asp-action="uniquelinkpanel" asp-route-pageNumber="@(Model.PageIndex-1)">Previous</a></li>
