--- a/Views/Link/UniqueLinkPanel.cshtml
+++ b/Views/Link/UniqueLinkPanel.cshtml
@@ -4,7 +4,7 @@
     string textColor = String.Empty;
 }
 @model PaginetedList<UniqueLink>
-                                 
+
 <div class="row">
     <div class="col-sm-12 col-md-6 col-lg-3">
         <form method="get" asp-controller="link" asp-action="uniquelinkpanel" autocomplete="off">
@@ -23,70 +23,72 @@
 
 <div class="table-responsive scrollable">
     <table class="table text-nowrap">
-    <thead>
-        <tr>
-            <th scope="col">Guid</th>
-            <th scope="col">DateTimeExpire</th>
-            <th scope="col">Minutes</th>
-            <th scope="col">Type</th>
-            <th scope="col">Author Id</th>
-            <th scope="col">Author Name</th>
-            <th scope="col">Action</th>
-            <th scope="col"></th>
-            <th scope="col"></th>
-        </tr>
-    </thead>
-    <tbody>
-    @{
-    if(Model is not null)
-    {
-        foreach (var link in Model)
-        {
+        <thead>
             <tr>
-                @{
-                    string colorDateTimeExpire;
-                    if (link.DateTimeExpire >= DateTime.Now){
-                        colorDateTimeExpire = "text-success";
-                    }else{
-                        colorDateTimeExpire = "text-danger";
+                <th scope="col">Guid</th>
+                <th scope="col">DateTimeExpire</th>
+                <th scope="col">Minutes</th>
+                <th scope="col">Type</th>
+                <th scope="col">Author Id</th>
+                <th scope="col">Author Name</th>
+                <th scope="col">Action</th>
+                <th scope="col"></th>
+                <th scope="col"></th>
+            </tr>
+        </thead>
+        <tbody>
+            @{
+                if (Model is not null)
+                {
+                    foreach (var link in Model)
+                    {
+                        <tr>
+                            @{
+                                string colorDateTimeExpire;
+                                if (link.DateTimeExpire >= DateTime.Now)
+                                {
+                                    colorDateTimeExpire = "text-success";
+                                }
+                                else
+                                {
+                                    colorDateTimeExpire = "text-danger";
+                                }
+                            }
+                            <th class="text-warning" scope="row">@link.Guid</th>
+                            <td class="@colorDateTimeExpire">@link.DateTimeExpire</td>
+                            <td class="text-info">@link.Minutes</td>
+                            <th class="text-warning" scope="row">@link.Type</th>
+                            <th class="text-info" scope="row">@link.User.Id</th>
+                            <th style="color:@link.User.Color" scope="row">@link.User.Name</th>
+                            <td><a asp-controller="link" asp-action="deleteurl" asp-route-guid="@link.Guid" asp-route-pNumber="@Model.PageIndex" class="btn btn-danger btn-sm">Delete</a></td>
+                            <td><a asp-controller="link" asp-action="refreshurl" asp-route-guid="@link.Guid" asp-route-pNumber="@Model.PageIndex" class="btn btn-warning btn-sm">Refresh</a></td>
+                            <td><a asp-controller="link" asp-action="shareurl" asp-route-guid="@link.Guid" class="btn btn-success btn-sm">Copy link</a></td>
+                            <td><a asp-controller="link" asp-action="editminutes" asp-route-guid="@link.Guid" class="btn btn-warning btn-sm">Set minutes</a></td>
+                        </tr>
                     }
                 }
-                <th class="text-warning" scope="row">@link.Guid</th>
-                <td class="@colorDateTimeExpire">@link.DateTimeExpire</td>
-                <td class="text-info">@link.Minutes</td>
-                <th class="text-warning" scope="row">@link.Type</th>
-                <th class="text-info"  scope="row">@link.User.Id</th>
-                <th style="color:@link.User.Color" scope="row">@link.User.Name</th>
-                <td><a asp-controller="link" asp-action="deleteurl" asp-route-guid="@link.Guid" asp-route-pNumber="@Model.PageIndex" class="btn btn-danger btn-sm">Delete</a></td>
-                <td><a asp-controller="link" asp-action="refreshurl" asp-route-guid="@link.Guid" asp-route-pNumber="@Model.PageIndex" class="btn btn-warning btn-sm">Refresh</a></td>
-                <td><a asp-controller="link" asp-action="shareurl" asp-route-guid="@link.Guid" class="btn btn-success btn-sm">Copy link</a></td>
-                <td><a asp-controller="link" asp-action="editminutes" asp-route-guid="@link.Guid" class="btn btn-warning btn-sm">Set minutes</a></td>
-            </tr>
-        }        
-    }
-    }
-    </tbody>
+            }
+        </tbody>
     </table>
 </div>
 @{
-if(Model is not null)
-{
-    <div class="row pagginationDiv">
-        <div class="col-12">
-            <small>@Model.Count of @Model.TotalCount</small>
-            <nav class="nav justify-content-center border-top border-white">
-                <ul class="pagination mt-2">
-                    <li class="page-item @Model.PreviousDisabled()"><a class="page-link" asp-controller="link" asp-action="uniquelinkpanel" asp-route-pageNumber="@(Model.PageIndex-1)">Previous</a></li>
-                    @foreach (var item in Model.Pages(1))
-                    {
-                        <li class="page-item @Model.ActivePage(item)"><a class="page-link " asp-controller="link" asp-action="uniquelinkpanel" asp-route-pageNumber="@item">@item</a></li>
-                    }
-                    <li class="page-item @Model.NextDisabled()"><a class="page-link" asp-controller="link" asp-action="uniquelinkpanel" asp-route-pageNumber="@(Model.PageIndex+1)">Next</a></li>
-                </ul>
-            </nav>
+    if (Model is not null)
+    {
+        <div class="row pagginationDiv">
+            <div class="col-12">
+                <small>@Model.Count of @Model.TotalCount</small>
+                <nav class="nav justify-content-center border-top border-white">
+                    <ul class="pagination mt-2">
+                        <li class="page-item @Model.PreviousDisabled()"><a class="page-link" asp-controller="link" asp-action="uniquelinkpanel" asp-route-pageNumber="@(Model.PageIndex-1)">Previous</a></li>
+                        @foreach (var item in Model.Pages(1))
+                        {
+                            <li class="page-item @Model.ActivePage(item)"><a class="page-link " asp-controller="link" asp-action="uniquelinkpanel" asp-route-pageNumber="@item">@item</a></li>
+                        }
+                        <li class="page-item @Model.NextDisabled()"><a class="page-link" asp-controller="link" asp-action="uniquelinkpanel" asp-route-pageNumber="@(Model.PageIndex+1)">Next</a></li>
+                    </ul>
+                </nav>
+            </div>
         </div>
-    </div>
-}
+    }
 }
 
-   
