--- a/Views/Exceptions/BadRequestPage.cshtml
+++ b/Views/Exceptions/BadRequestPage.cshtml
@@ -11,7 +11,7 @@
             <div class="card-body">
                 <h2 class="text-danger">400</h2>
                 <h6>Your request has caused an error.</h6>
-                <a class="btn-primary btn btn-primary mt-4" asp-controller="Home" asp-action="Index">Got to home</a>
+                <a class="btn-primary btn btn-primary mt-4" asp-controller="Home" asp-action="Index">Go to home</a>
             </div>
         </div>
     </div>
