--- a/Views/Link/ShareUrl.cshtml
+++ b/Views/Link/ShareUrl.cshtml
@@ -13,18 +13,26 @@
             <div class="card-body">
                 <div class="input-group mb-3">
                     <div class="input-group-prepend">
-                        <button class="btn btn-outline-secondary" onclick="myFunction()" type="button">Copy</button>
+                        <button class="btn btn-outline-secondary" onclick="copyText()" type="button">Copy</button>
                     </div>
                     <input type="text" class="form-control w-25" id="copyFuncion" readonly="readonly" value="@Model">
+                    
                 </div>
+                <small id="textCopied" style="display:none;" class="text-success"><i class="bi bi-check-circle"></i> Url copied</small>
             </div>
         </div>
     </div>
 </div>
 @*//TODO nie dziala skrypt js*@
 <script>
-    const text = document.getElementById("copyFuncion");
-    text.select();
-    text.setSelectionRange(0, 99999);
-    navigator.clipboard.writeText(text.value);
+    function copyText(){
+        const text = document.getElementById("copyFuncion");
+        text.select();
+        text.setSelectionRange(0, 99999);
+        navigator.clipboard.writeText(text.value);
+        document.getElementById("textCopied").style = "display:block";
+        setTimeout(function(){
+            document.getElementById("textCopied").style = "display:none";
+        },3500);
+    }
 </script>
