add access track

--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -39,7 +39,7 @@
                         </li>
                         <!--- library --->
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Library</a>
+                            <a class="nav-link" asp-controller="library" asp-action="tracks">Library</a>
                         </li>
                         <!--- upload --->
                         <li class="nav-item">
