--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -56,4 +56,14 @@
     }
 }
 
+.background-player {
+    background: rgb(67,65,98);
+    background: linear-gradient(14deg, rgba(67,65,98,0.773546918767507) 0%, rgba(82,112,147,0.21332282913165268) 36%, rgba(82,70,179,0.4066001400560224) 100%);
+    border-radius: 5px;
+    padding:5px;
+}
+
+
+
+
 
