--- a/Views/Upload/AddTrack.cshtml
+++ b/Views/Upload/AddTrack.cshtml
@@ -32,6 +32,11 @@
                             <label class="form-check-label" for="private">Private</label>
                         </div>
 
+                        <div class="form-check mt-3">
+                            <input asp-for="IsDownloadle" type="checkbox" class="form-check-input" id="private">
+                            <label class="form-check-label" for="private">Downloadle</label>
+                        </div>
+
                         <div class="form-group mt-3 text-center">
                             <button type="submit" class="btn btn-success">Submit</button>
                         </div>
