fix: replace upload with library, change name of uniquelink to link

--- a/Views/Link/UniqueLinkPanel.cshtml
+++ b/Views/Link/UniqueLinkPanel.cshtml
@@ -3,7 +3,7 @@
     Layout = "_Layout";
     string textColor = String.Empty;
 }
-@model PaginetedList<UniqueLink>
+@model PaginetedList<Link>
 
 <div class="row">
     <div class="col-sm-12 col-md-6 col-lg-3">
