--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -43,7 +43,7 @@
                         </li>
                         <!--- upload --->
                         <li class="nav-item">
-                            <a class="nav-link" asp-controller="upload" asp-action="addtrack">Upload</a>
+                            <a class="nav-link" asp-controller="library" asp-action="addtrack">Upload</a>
                         </li>
                         
                     </ul>
