--- a/Views/Shared/_ProfilePartial.cshtml
+++ b/Views/Shared/_ProfilePartial.cshtml
@@ -1,11 +1,11 @@
-﻿@{
-	string color = User.FindFirst(x => x.Type == "Color").Value;
-}
-<li class="nav-item dropdown">
-    <a class="nav-link dropdown-toggle" style="color:@color" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+﻿<li class="nav-item dropdown">
+    <a class="nav-link dropdown-toggle" style="color:@User.FindFirst(x => x.Type == "Color").Value" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
         @User.Identity.Name
     </a>
     <ul class="dropdown-menu dropdownCustom" aria-labelledby="dropdownMenuUserPanel">
+        <li>
+            <a class="dropdown-item" asp-controller="account" asp-action="profile" asp-route-name="@User.FindFirst(x => x.Type == ClaimTypes.Name).Value">Profile</a>
+        </li>
         <li>
             <a class="dropdown-item" asp-controller="account" asp-action="userlog">Logs</a>
         </li>
