--- a/Views/Exceptions/Forbidden.cshtml
+++ b/Views/Exceptions/Forbidden.cshtml
@@ -2,9 +2,9 @@
     ViewData["Title"] = "403 Forbidden";
     Layout = "_SimpleLayout";
 }
-<div class="row" style="margin-top:10vh;">
+<div class="row mt-5">
     <div class="d-flex justify-content-center">
-        <div class="card" style="width:50vh;">
+        <div class="card formBox">
             <div class="card-header">
                 <h5>Server error</h5>
             </div>
