--- a/Views/Exceptions/InternalServerError.cshtml
+++ b/Views/Exceptions/InternalServerError.cshtml
@@ -2,8 +2,8 @@
     ViewData["Title"] = "500 Internal Server Error";
     Layout = "_SimpleLayout";
 }
-<div class="row" style="margin-top:10vh;">
-    <div class="d-flex justify-content-center">
+<div class="row mt-5">
+    <div class="card formBox">
         <div class="card" style="width:50vh;">
             <div class="card-header">
                 <h5>Server error</h5>
