--- a/Views/Account/ChangeTheme.cshtml
+++ b/Views/Account/ChangeTheme.cshtml
@@ -4,9 +4,9 @@
 }
 @model ChangeThemeDto
 
-<div class="row" style="margin-top:10vh;">
+<div class="row mt-5">
     <div class="d-flex justify-content-center">
-        <div class="card" style="width:50vh;">
+        <div class="card formBox">
             <div class="card-header">
                 <h5>Change password</h5>
             </div>
