--- a/Views/Account/UserSettings.cshtml
+++ b/Views/Account/UserSettings.cshtml
@@ -2,9 +2,9 @@
     ViewData["Title"] = "Settings";
     Layout = "_layout";
 }
-<div class="row" style="margin-top:10vh;">
+<div class="row mt-5">
     <div class="d-flex justify-content-center">
-        <div class="card" style="width:50vh;">
+        <div class="card formBox">
             <div class="card-header">
                 <h5>Settings</h5>
             </div>
