--- a/Views/Admin/EditUser.cshtml
+++ b/Views/Admin/EditUser.cshtml
@@ -4,9 +4,9 @@
     Layout = "_Layout";
 }
 
-<div class="row" style="margin-top:10vh;">
+<div class="row mt-5">
     <div class="d-flex justify-content-center">
-        <div class="card" style="width:50vh;">
+        <div class="card forms_width">
             <div class="card-header">
                 <h5>Edit user</h5>
             </div>
