--- a/Views/Admin/Userspanel.cshtml
+++ b/Views/Admin/Userspanel.cshtml
@@ -52,26 +52,7 @@
         </tbody>
     </table>
 </div>
-@{
-    if (Model is not null)
-    {
-        <div class="row pagginationDiv">
-            <div class="col-12">
-                <small>@Model.Count of @Model.TotalCount</small>
-                <nav class="nav justify-content-center border-top border-white">
-                    <ul class="pagination mt-2">
-                        <li class="page-item @Model.PreviousDisabled()"><a class="page-link" asp-controller="admin" asp-action="userspanel" asp-route-pageNumber="@(Model.PageIndex-1)">Previous</a></li>
-                        @foreach (var item in Model.Pages(1))
-                        {
-                            <li class="page-item @Model.ActivePage(item)"><a class="page-link " asp-controller="admin" asp-action="userspanel" asp-route-pageNumber="@item">@item</a></li>
-                        }
-                        <li class="page-item @Model.NextDisabled()"><a class="page-link" asp-controller="admin" asp-action="userspanel" asp-route-pageNumber="@(Model.PageIndex+1)">Next</a></li>
-                    </ul>
-                </nav>
-            </div>
-        </div>
-    }
-}
+<partial name="_PaginationPartial"/>
 
 
 
