--- a/Views/Exceptions/NotFoundPage.cshtml
+++ b/Views/Exceptions/NotFoundPage.cshtml
@@ -3,9 +3,9 @@
     Layout = "_SimpleLayout";
     //TODO replace in exceptions messages with class Message
 }
-<div class="row" style="margin-top:10vh;">
+<div class="row mt-5">
     <div class="d-flex justify-content-center">
-        <div class="card" style="width:50vh;">
+        <div class="card formBox">
             <div class="card-header">
                 <h5>Server error</h5>
             </div>
