--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -1,30 +1,23 @@
 ﻿.page-container {
     position: relative;
-    min-height: 100vh;
 }
 
 .content-wrap {
-    padding-bottom: 5vh;
+    padding-bottom: 10vh;
 }
 
-.footerDiv {
-    position: absolute;
-    bottom: 0;
-    width: 100%;
-    height: 50px;
-    background-color: #262626;
-}
 .pagginationDiv {
-    position: absolute;
+    position: fixed;
     bottom: 0;
     width: 100%;
-    height: 10rem;
+    background-color: #222222;
 }
 
 .text-nowrap {
     text-overflow: ellipsis;
     white-space: nowrap;
 }
+
 .bg-nav {
     background-color: #262626;
 }
@@ -32,7 +25,6 @@
 ::-webkit-scrollbar {
     width: 10px;
 }
-
 
 ::-webkit-scrollbar-track {
     background: #f1f1f1;
@@ -43,10 +35,9 @@
     background: #888;
 }
 
-
-::-webkit-scrollbar-thumb:hover {
-    background: #555;
-}
+    ::-webkit-scrollbar-thumb:hover {
+        background: #555;
+    }
 
 @media only screen and (min-width: 700px) {
 
@@ -61,9 +52,13 @@
     background: linear-gradient(14deg, rgba(67,65,98,0.773546918767507) 0%, rgba(74,72,103,0.43461134453781514) 58%, rgba(119,119,139,1) 99%, rgba(82,70,179,0.4066001400560224) 100%);
 }
 
-
-
-
-
-
-
+@media only screen and (min-width:200px){
+    .formBox{
+        width:100%;
+    }
+}
+@media only screen and (min-width:920px) {
+    .formBox {
+        width: 50%;
+    }
+}
