--- a/Views/Account/Profile.cshtml
+++ b/Views/Account/Profile.cshtml
@@ -4,81 +4,107 @@
     Layout = "_Layout";
 }
 
-<div class="container mt-2">
-    <div class="row bg-secondary">
-        <div class="col-md-2 col-12 p-4 text-center">
-            <label for="formChangeAvatar" style="cursor: pointer; object-fit:cover;">
-                <img class="rounded-circle" src="https://www.wykop.pl/cdn/c3201142/comment_dYwgPq03e90QvvakJ1DK3w0L0Hl536BF.jpg" alt="Avatar Profile" style="width:120px; height:120px;">
-            </label>
-            <form style="display: none;">
-                <input type="file" id="formChangeAvatar"/>
-                <input type="submit" value="Submit">
-            </form>
-        </div>
+<div class="row bg-secondary">
+    <div class="col-md-2 col-12 p-4 text-center">
+        <label for="formChangeAvatar" style="cursor: pointer; object-fit:cover;">
+            <img class="rounded-circle" src="https://www.wykop.pl/cdn/c3201142/comment_dYwgPq03e90QvvakJ1DK3w0L0Hl536BF.jpg" alt="Avatar Profile" style="width:120px; height:120px;">
+        </label>
+        <form style="display: none;">
+            <input type="file" id="formChangeAvatar"/>
+            <input type="submit" value="Submit">
+        </form>
     </div>
+</div>
 
-    <div class="row mt-2">
-        <div class="col-md-2 col-12 text-center">
-            <strong style="color:@Model.Color;">@Model.Name</strong>
-        </div>
-         <div class="col-md-10 col-12 p-0 text-md-end text-center mt-md-0 mt-2">
-            <div class="btn-group" role="group">
-                <button type="button" class="btn btn-secondary mx-2 btn-sm btn-info"><i class="bi bi-share-fill"></i> Share</button>
-                <button type="button" class="btn btn-secondary mx-2 btn-sm btn-info"><i class="bi bi-pencil-square"></i> Edit</button>
-             </div>
+<div class="row mt-2">
+    <div class="col-md-2 col-12 text-center">
+        <strong style="color:@Model.Color;">@Model.Name</strong>
+    </div>
+        <div class="col-md-10 col-12 p-0 text-md-end text-center mt-md-0 mt-2">
+        <div class="btn-group" role="group">
+            <button type="button" class="btn btn-secondary mx-2 btn-sm btn-info"><i class="bi bi-share-fill"></i> Share</button>
+            <button type="button" class="btn btn-secondary mx-2 btn-sm btn-info"><i class="bi bi-pencil-square"></i> Edit</button>
         </div>
     </div>
 </div>
 
-<div class="container mt-2">
-    <div class="col-sm-12 col-md-6 col-lg-3 mt-3 ">
+<div class="row bg-secondary mt-3 p-2" >
+    <div class="col-12 col-md-3 mt-3 mt-md-0 text-center">
+        <span><i class="bi bi-file-music-fill"></i> Tracks: @Model.TotalTracks</span>
+    </div>
+    <div class="col-12 col-md-3 mt-3 mt-md-0 text-center">
+        <span><i class="bi bi-calendar-week-fill"></i> Joined: @Model.CreatedTime.ToString("d")</span>
+    </div>
+    <div class="col-12 col-md-3 mt-3 mt-md-0 text-center">
+        <span><i class="bi bi-hdd-rack-fill"></i> Limit: 100MB</span>
+    </div>
+    <div class="col-12 col-md-3 mt-3 mt-md-0 text-center">
+        <span><i class="bi bi-cloud-plus-fill"></i> Last upload: @Model.LastUpload</span>
+    </div>
+</div>
+<div class="row">
+    <div class="col-sm-12 col-md-6 col-lg-3 mt-3">
         <form method="get" asp-controller="account" asp-action="profile" asp-route-name="@Model.Name" autocomplete="off">
-            <div class="input-group mb-3">
+            <div class="btn-group" role="group">
                 <input type="text" name="search" class="form-control" placeholder="search">
-                <div class="input-group-prepend">
-                    <button class="btn btn-success" type="submit">Search</button>
-                    <a asp-controller="account" asp-action="profile" asp-route-name="@Model.Name" class="btn btn-warning" role="button">Clear</a>
-                </div>
+                <button class="btn btn-success" type="submit">Search</button>
+                <a asp-controller="account" asp-action="profile" asp-route-name="@Model.Name" class="btn btn-warning">Clear</a>
             </div>
         </form>
     </div>
-     <div class="col-12" >
-        <div class="table-responsive scrollable">
-        <table class="table text-nowrap">
-            <thead>
-                <tr>
-                    <th scope="col">Track</th>
-                    <th scope="col">Access</th>
-                    <th class="text-end" scope="col">Posted</th>
-                </tr>
-            </thead>
-            <tbody>
-                @{
-                    if (Model.Tracks is not null)
-                    {
-                           foreach (var track in Model.Tracks)
-                        {
-                            <tr>
-                                <td><a style="text-decoration: none;" asp-controller="library" asp-action="track" asp-route-guid="@track.Guid" class="btn btn-link pt-0 ">@track.Title</a></td>
-                                @if(track.TrackAccess == TrackAccess.Internal)
-                                {
-                                    <th class="text-info" scope="row"><i class="bi bi-unlock-fill"></i> @nameof(TrackAccess.Internal)</th>
-                                }else if(track.TrackAccess == TrackAccess.Private)
-                                {
-                                    <th class="text-info" scope="row"><i class="bi bi-lock-fill"></i> @nameof(TrackAccess.Private)</th>
-                                }else if(track.TrackAccess == TrackAccess.Public)
-                                {
-                                    <th class="text-info" scope="row"><i class="bi bi-globe"></i> @nameof(TrackAccess.Public)</th>
-                                }
-                                <th class="text-warning text-end" scope="row">@track.DateTimeCreate</th>
-                            </tr>
-                        }
-                    }
-                }
-                </tbody>
-            </table>
-        </div>
-    </div>
 </div>
 
+@if(Model.TotalTracks > 0)
+{
+    <div class="row">
+        @if(Model.Tracks is not null)
+        {
+             <div class="col-12" >
+                <div class="table-responsive scrollable">
+                <table class="table text-nowrap">
+                    <thead>
+                        <tr>
+                            <th scope="col">Track</th>
+                            <th scope="col">Access</th>
+                            <th class="text-end" scope="col">Posted</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        @{
+                            if (Model.Tracks is not null)
+                            {
+                                   foreach (var track in Model.Tracks)
+                                {
+                                    <tr>
+                                        <td><a style="text-decoration: none;" asp-controller="library" asp-action="track" asp-route-guid="@track.Guid" class="btn btn-link pt-0 ">@track.Title</a></td>
+                                        @if(track.TrackAccess == TrackAccess.Internal)
+                                        {
+                                            <th class="text-info" scope="row"><i class="bi bi-unlock-fill"></i> @nameof(TrackAccess.Internal)</th>
+                                        }else if(track.TrackAccess == TrackAccess.Private)
+                                        {
+                                            <th class="text-info" scope="row"><i class="bi bi-lock-fill"></i> @nameof(TrackAccess.Private)</th>
+                                        }else if(track.TrackAccess == TrackAccess.Public)
+                                        {
+                                            <th class="text-info" scope="row"><i class="bi bi-globe"></i> @nameof(TrackAccess.Public)</th>
+                                        }
+                                        <th class="text-warning text-end" scope="row">@track.DateTimeCreate</th>
+                                        </tr>
+                                    }
+                                }
+                            }
+                        </tbody>
+                    </table>
+                </div>
+            </div>
+        }
+        else
+        {
+            <partial name="_NoResultPartial"/>
+        }
 
+    </div>
+    @if(Model.Tracks is not null)
+    {
+        <partial name="_PaginationPartial"/>
+    }
+}
