--- a/Views/Account/UserLog.cshtml
+++ b/Views/Account/UserLog.cshtml
@@ -17,32 +17,32 @@
     </div>
 </div>
 
-
-<div class="table-responsive scrollable">
-    <table class="table text-nowrap">
-        <thead>
-            <tr>
-                <th scope="col">Guid</th>
-                <th scope="col">Date</th>
-                <th scope="col">Action</th>
-            </tr>
-        </thead>
-        <tbody>
-            @{
-                if (Model is not null)
-                {
-                    foreach (var log in Model)
-                    {
-                        <tr>
-                            <th class="text-warning" scope="row">@log.Guid</th>
-                            <td class="text-warning">@log.CreatedDate</td>
-                            <td class="text-info">@log.Action</td>
-                        </tr>
-                    }
-                }
+@if (Model is not null)
+{
+    <div class="table-responsive scrollable">
+        <table class="table text-nowrap">
+            <thead>
+                <tr>
+                    <th scope="col">Date</th>
+                    <th scope="col">Action</th>
+                </tr>
+            </thead>
+            <tbody>
+            @foreach (var log in Model)
+            {
+                <tr>
+                    <td class="text-warning">@log.CreatedDate</td>
+                    <td class="text-info">@log.Action</td>
+                </tr>
             }
-        </tbody>
-    </table>
-</div>
-<partial name="_PaginationPartial"/>
+            </tbody>
+        </table>
+    </div>
+    <partial name="_PaginationPartial"/>
+}
+else
+{
+    <partial name="_NoResultPartial"/>
+}
+
 
