--- a/Views/Admin/Userspanel.cshtml
+++ b/Views/Admin/Userspanel.cshtml
@@ -17,42 +17,44 @@
         </form>
     </div>
 </div>
-
-<div class="table-responsive scrollable">
-    <table class="table text-nowrap">
-        <thead>
-            <tr>
-                <th scope="col">Id</th>
-                <th scope="col">Username</th>
-                <th scope="col">Added at</th>
-                <th scope="col">Block status</th>
-                <th scope="col">User role</th>
-                <th scope="col">Theme</th>
-                <th scope="col">Action</th>
-            </tr>
-        </thead>
-        <tbody>
-            @{
-                if (Model is not null)
-                {
-                    @foreach (var user in Model)
-                    {
-                        <tr>
-                            <th class="text-warning" scope="row">@user.Id</th>
-                            <td style="color:@user.Color;">@user.Name</td>
-                            <td class="text-warning">@user.CreatedTime</td>
-                            <td class="text-info">@user.Block</td>
-                            <td class="text-warning">@user.Role</td>
-                            <td class="text-info">@user.Theme</td>
-                            <td><a asp-controller="admin" asp-action="edituser" asp-route-id="@user.Id" class="btn btn-info btn-sm">Edit</a></td>
-                        </tr>
-                    }
-                }
+@if(Model is not null)
+{
+    <div class="table-responsive scrollable">
+        <table class="table text-nowrap">
+            <thead>
+                <tr>
+                    <th scope="col">Id</th>
+                    <th scope="col">Username</th>
+                    <th scope="col">Added at</th>
+                    <th scope="col">Block status</th>
+                    <th scope="col">User role</th>
+                    <th scope="col">Theme</th>
+                    <th scope="col">Action</th>
+                </tr>
+            </thead>
+            <tbody>
+            @foreach (var user in Model)
+            {
+                <tr>
+                    <th class="text-warning" scope="row">@user.Id</th>
+                    <td><a style="text-decoration: none;" asp-controller="account" asp-action="profile" asp-route-name="@user.Name" class="btn btn-link btn-sm">@user.Name</a></td>
+                    <td class="text-warning">@user.CreatedTime</td>
+                    <td class="text-info">@user.Block</td>
+                    <td class="text-warning">@user.Role</td>
+                    <td class="text-info">@user.Theme</td>
+                    <td><a asp-controller="admin" asp-action="edituser" asp-route-id="@user.Id" class="btn btn-info btn-sm">Edit</a></td>
+                </tr>
             }
-        </tbody>
-    </table>
-</div>
-<partial name="_PaginationPartial"/>
+            </tbody>
+        </table>
+    </div>
+    <partial name="_PaginationPartial"/>
+}
+else
+{
+    <partial name="_NoResultPartial"/>
+}
+
 
 
 
