--- a/Views/Shared/_PaginationPartial.cshtml
+++ b/Views/Shared/_PaginationPartial.cshtml
@@ -20,14 +20,14 @@
         <div class="row pagginationDiv">
             <div class="col-12 text-nowrap">
                 <small>@mod.Count of @mod.TotalCount</small>
-                <nav class="nav justify-content-center border-top border-white">
+                <nav class="nav justify-content-center">
                     <ul class="pagination mt-2">
-                        <li class="page-item mod.PreviousDisabled()"><a class="page-link" asp-controller="@controllerName" asp-action="@acionName" asp-route-search="@urlQuery.Query["search"]" asp-route-pageNumber="@(mod.PageIndex-1)">Previous</a></li>
+                        <li class="page-item @mod.PreviousDisabled()"><a class="page-link" asp-controller="@controllerName" asp-action="@acionName" asp-route-search="@urlQuery.Query["search"]" asp-route-pageNumber="@(mod.PageIndex-1)">Previous</a></li>
                         @foreach (var item in mod.Pages(1))
                         {
-                            <li class="page-item mod.ActivePage(item)"><a class="page-link " asp-controller="@controllerName" asp-action="@acionName" asp-route-search="@urlQuery.Query["search"]" asp-route-pageNumber="@item">@item</a></li>
+                            <li class="page-item @mod.ActivePage(item)"><a class="page-link " asp-controller="@controllerName" asp-action="@acionName" asp-route-search="@urlQuery.Query["search"]" asp-route-pageNumber="@item">@item</a></li>
                         }
-                        <li class="page-item mod.NextDisabled()"><a class="page-link" asp-controller="@controllerName" asp-action="@acionName" asp-route-search="@urlQuery.Query["search"]" asp-route-pageNumber="@(mod.PageIndex+1)">Next</a></li>
+                        <li class="page-item @mod.NextDisabled()"><a class="page-link" asp-controller="@controllerName" asp-action="@acionName" asp-route-search="@urlQuery.Query["search"]" asp-route-pageNumber="@(mod.PageIndex+1)">Next</a></li>
                     </ul>
                 </nav>
             </div>
