--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -58,6 +58,7 @@
             @RenderBody()
         </main>
     </div>
+    <partial name="_PaginationPartial"/>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/datatables/datatables.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
