--- a/Views/Account/Profile.cshtml
+++ b/Views/Account/Profile.cshtml
@@ -36,7 +36,7 @@
         <span><i class="bi bi-calendar-week-fill"></i> Joined: @Model.CreatedTime.ToString("d")</span>
     </div>
     <div class="col-12 col-md-3 mt-3 mt-md-0 text-center">
-        <span><i class="bi bi-hdd-rack-fill"></i> Limit: 100MB</span>
+        <span><i class="bi bi-hdd-rack-fill"></i> @Model.TotalSizeOfTracks MB free of 100 MB</span>
     </div>
     <div class="col-12 col-md-3 mt-3 mt-md-0 text-center">
         <span><i class="bi bi-cloud-plus-fill"></i> Last upload: @Model.LastUpload</span>
@@ -45,14 +45,15 @@
 
 @if(Model.TotalTracks > 0)
 {
-
     <div class="row">
         <div class="col-sm-12 col-md-6 col-lg-3 mt-3">
             <form method="get" asp-controller="account" asp-action="profile" asp-route-name="@Model.Name" autocomplete="off">
-                <div class="btn-group" role="group">
-                    <input type="text" name="search" class="form-control" placeholder="search">
-                    <button class="btn btn-success" type="submit">Search</button>
-                    <a asp-controller="account" asp-action="profile" asp-route-name="@Model.Name" class="btn btn-warning">Clear</a>
+                <div class="input-group mb-3">
+                    <input id="search" type="text" name="search" class="form-control" placeholder="search">
+                    <div class="input-group-prepend">
+                        <button id="searchSubmit" class="btn btn-success" type="submit">Search</button>
+                        <a asp-controller="account" asp-action="profile" class="btn btn-warning" role="button">Clear</a>
+                    </div>
                 </div>
             </form>
         </div>
@@ -63,47 +64,46 @@
                 <table class="table text-nowrap">
                     <thead>
                         <tr>
-                            <th scope="col">Track</th>
+                            <th scope="col">Name</th>
+                            <th scope="col">Posted</th>
                             <th scope="col">Access</th>
-                            <th class="text-end" scope="col">Posted</th>
+                            <th scope="col">Type</th>
+                            <th scope="col">Size</th>
                         </tr>
                     </thead>
                     <tbody>
-                        @{
-                            if (Model.Tracks is not null)
-                            {
-                                   foreach (var track in Model.Tracks)
+                    @if (Model.Tracks is not null)
+                    {
+                        @foreach (var track in Model.Tracks)
+                        {
+                            <tr>
+                                <td><a style="text-decoration: none;" asp-controller="library" asp-action="track" asp-route-guid="@track.Guid" class="btn btn-link pt-0">@track.Title</a></td>
+                                        
+                                <th class="text-warning" scope="row">@track.DateTimeCreate</th>
+                                        
+                                @if(track.TrackAccess == TrackAccess.Internal)
                                 {
-                                    <tr>
-                                        <td><a style="text-decoration: none;" asp-controller="library" asp-action="track" asp-route-guid="@track.Guid" class="btn btn-link pt-0 ">@track.Title</a></td>
-                                        @if(track.TrackAccess == TrackAccess.Internal)
-                                        {
-                                            <th class="text-info" scope="row"><i class="bi bi-unlock-fill"></i> @nameof(TrackAccess.Internal)</th>
-                                        }else if(track.TrackAccess == TrackAccess.Private)
-                                        {
-                                            <th class="text-info" scope="row"><i class="bi bi-lock-fill"></i> @nameof(TrackAccess.Private)</th>
-                                        }else if(track.TrackAccess == TrackAccess.Public)
-                                        {
-                                            <th class="text-info" scope="row"><i class="bi bi-globe"></i> @nameof(TrackAccess.Public)</th>
-                                        }
-                                        <th class="text-warning text-end" scope="row">@track.DateTimeCreate</th>
-                                        </tr>
-                                    }
+                                    <th class="text-info" scope="row"><i class="bi bi-unlock-fill"></i> @nameof(TrackAccess.Internal)</th>
+                                }else if(track.TrackAccess == TrackAccess.Private)
+                                {
+                                    <th class="text-info" scope="row"><i class="bi bi-lock-fill"></i> @nameof(TrackAccess.Private)</th>
+                                }else if(track.TrackAccess == TrackAccess.Public)
+                                {
+                                    <th class="text-info" scope="row"><i class="bi bi-globe"></i> @nameof(TrackAccess.Public)</th>
                                 }
-                            }
-                        </tbody>
-                    </table>
-                </div>
+                                <th class="text-warning" scope="row">@track.Extension</th>
+                                <th class="text-warning" scope="row">@track.Size MB</th>
+                            </tr>
+                        }
+                    }
+                    </tbody>
+                </table>
             </div>
-        }
+        </div>
+    }
         else
         {
             <partial name="_NoResultPartial"/>
         }
-
     </div>
-    @if(Model.Tracks is not null)
-    {
-        <partial name="_PaginationPartial"/>
-    }
 }
