--- a/Views/Shared/_PaginationPartial.cshtml
+++ b/Views/Shared/_PaginationPartial.cshtml
@@ -1,36 +1,48 @@
 ﻿@{
     if (Model is not null)
     {
+        bool render = false;
         var urlActionContext = Url.ActionContext;
         dynamic mod;
+        if (urlActionContext.RouteData.Values["action"].ToString() == "Track")
+            return;
         if(urlActionContext.RouteData.Values["action"].ToString() == "Profile")
         {
-            mod = Model.Tracks;
+            if(Model.Tracks is not null)
+            {
+                mod = Model.Tracks;
+                if(Model.Tracks.Count > 0)
+                    render = true;
+            }
+            else return;
         }
         else
         {
             mod = Model;
+            if (Model.Count > 0)
+                render = true;
         }
+        if (render)
+        {
+            var urlQuery = urlActionContext.HttpContext.Request;
+            var acionName = urlActionContext.RouteData.Values["action"].ToString().ToLower();
+            var controllerName = urlActionContext.RouteData.Values["controller"].ToString().ToLower();
 
-        
-        var urlQuery = urlActionContext.HttpContext.Request;
-        var acionName = urlActionContext.RouteData.Values["action"].ToString();
-        var controllerName = urlActionContext.RouteData.Values["controller"].ToString();
-
-        <div class="row pagginationDiv">
-            <div class="col-12 text-nowrap">
-                <small>@mod.Count of @mod.TotalCount</small>
-                <nav class="nav justify-content-center">
-                    <ul class="pagination mt-2">
-                        <li class="page-item @mod.PreviousDisabled()"><a class="page-link" asp-controller="@controllerName" asp-action="@acionName" asp-route-search="@urlQuery.Query["search"]" asp-route-pageNumber="@(mod.PageIndex-1)">Previous</a></li>
-                        @foreach (var item in mod.Pages(1))
-                        {
-                            <li class="page-item @mod.ActivePage(item)"><a class="page-link " asp-controller="@controllerName" asp-action="@acionName" asp-route-search="@urlQuery.Query["search"]" asp-route-pageNumber="@item">@item</a></li>
-                        }
-                        <li class="page-item @mod.NextDisabled()"><a class="page-link" asp-controller="@controllerName" asp-action="@acionName" asp-route-search="@urlQuery.Query["search"]" asp-route-pageNumber="@(mod.PageIndex+1)">Next</a></li>
-                    </ul>
-                </nav>
+            <div class="row pagginationDiv">
+                <div class="col-12 text-nowrap">
+                    <small>@mod.Count of @mod.TotalCount</small>
+                    <nav class="nav justify-content-center">
+                        <ul class="pagination mt-2">
+                            <li class="page-item @mod.PreviousDisabled()"><a class="page-link" asp-controller="@controllerName" asp-action="@acionName" asp-route-search="@urlQuery.Query["search"]" asp-route-pageNumber="@(mod.PageIndex-1)">Previous</a></li>
+                            @foreach (var item in mod.Pages(1))
+                            {
+                                <li class="page-item @mod.ActivePage(item)"><a class="page-link " asp-controller="@controllerName" asp-action="@acionName" asp-route-search="@urlQuery.Query["search"]" asp-route-pageNumber="@item">@item</a></li>
+                            }
+                            <li class="page-item @mod.NextDisabled()"><a class="page-link" asp-controller="@controllerName" asp-action="@acionName" asp-route-search="@urlQuery.Query["search"]" asp-route-pageNumber="@(mod.PageIndex+1)">Next</a></li>
+                        </ul>
+                    </nav>
+                </div>
             </div>
-        </div>
+        }
     }
 }
