--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -11,6 +11,7 @@
     bottom: 0;
     width: 100%;
     background-color: #222222;
+    z-index:2;
 }
 
 .text-nowrap {
@@ -35,9 +36,9 @@
     background: #888;
 }
 
-    ::-webkit-scrollbar-thumb:hover {
-        background: #555;
-    }
+::-webkit-scrollbar-thumb:hover {
+    background: #555;
+}
 
 @media only screen and (min-width: 700px) {
 
