--- a/Views/Shared/_PaginationPartial.cshtml
+++ b/Views/Shared/_PaginationPartial.cshtml
@@ -1,6 +1,7 @@
 ﻿@{
     if (Model is not null)
     {
+        //TODO remove this partial from main Layout 
         bool render = false;
         var urlActionContext = Url.ActionContext;
         dynamic mod;
